Fixed layout issues with the Clubs pages and got them working with the Application layout file as well as the compass footer

--- a/app/assets/stylesheets/clubs.css.scss
+++ b/app/assets/stylesheets/clubs.css.scss
@@ -1,8 +1,5 @@
 /*
-*=require bootstrap
-*=require bootstrap-responsive
 *=require_self
-*=require _all
 */
 
 .nav li {
@@ -90,9 +87,5 @@
 }
 .nav ul li a {
 	color: #629B63 !important;
-}
-#footer {
-  position: absolute !important;
-  bottom: 0 !important;
 }
 
